--- a/App/Templates/cart.html
+++ b/App/Templates/cart.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="table-responsive">
+<div class="table-responsive" ng-if=cartProducts.length>
 <table class="table table-hover">
 <tr>
     <th>Model</th>
@@ -18,6 +18,6 @@
 <td><button ng-click="clearCart(product)" type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-trash"></span> Remove</button></td>
 </tr>    
 </table>
-    </div>
-    {{itemCount}}
+</div>
+<p ng-if=!cartProducts.length>There are no items in cart</p>
 </div>
