--- a/App/Templates/cart.html
+++ b/App/Templates/cart.html
@@ -11,7 +11,7 @@
 </tr>    
 <tr ng-repeat="product in cartProducts">
 <td>{{product.model}}</td>
-<td>{{product.category}}</td>
+<td>{{product.category | filter| uppercase}}</td>
 <td>{{product.description}}</td>
 <td>{{product.price | currency: " Rs."}}</td>
 <td><img src= {{product.imageUrl}} width="150" height="120"></td>
