--- a/App/Templates/home.html
+++ b/App/Templates/home.html
@@ -1,1 +1,8 @@
-<h1> This is home page</h1>
+<div class="container">
+ <div class="form-group">
+    <label class="control-label col-sm-2" for="date">Date:</label>
+    <div class="col-sm-4">
+      <input type="text" ng-Date-Picker class="form-control" ng-model="date" name="date">
+     </div>
+    </div>
+</div>
