--- a/App/Templates/login.html
+++ b/App/Templates/login.html
@@ -4,7 +4,7 @@
     <div class="form-group">
     <label class="control-label col-sm-2" for="username">Email:</label>
     <div class="col-sm-4">
-      <input ng-Validate-Alphabets type="text" class="form-control" name="email" ng-model="user.username" placeholder="Enter email">
+      <input type="text" ng-Validate-Alphabets class="form-control" name="email" ng-model="user.username" placeholder="Enter email">
     </div>
     </div>
     
